src/FreeFoilTypecheck/HindleyMilner/Parser/Par.y
-- -*- haskell -*- File generated by the BNF Converter (bnfc 2.9.5).

-- Parser definition for use with Happy
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
{-# LANGUAGE PatternSynonyms #-}

module FreeFoilTypecheck.HindleyMilner.Parser.Par
  ( happyError
  , myLexer
  , pPattern
  , pExp4
  , pExp3
  , pExp2
  , pExp1
  , pExp
  , pScopedExp
  , pTypePattern
  , pType2
  , pType1
  , pType
  , pScopedType
  ) where

import Prelude

import qualified FreeFoilTypecheck.HindleyMilner.Parser.Abs
import FreeFoilTypecheck.HindleyMilner.Parser.Lex

}

%name pPattern Pattern
%name pExp4 Exp4
%name pExp3 Exp3
%name pExp2 Exp2
%name pExp1 Exp1
%name pExp Exp
%name pScopedExp ScopedExp
%name pTypePattern TypePattern
%name pType2 Type2
%name pType1 Type1
%name pType Type
%name pScopedType ScopedType
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '('         { PT _ (TS _ 1)         }
  ')'         { PT _ (TS _ 2)         }
  '+'         { PT _ (TS _ 3)         }
  '-'         { PT _ (TS _ 4)         }
  '->'        { PT _ (TS _ 5)         }
  '.'         { PT _ (TS _ 6)         }
  '..'        { PT _ (TS _ 7)         }
  ':'         { PT _ (TS _ 8)         }
  '='         { PT _ (TS _ 9)         }
  'Bool'      { PT _ (TS _ 10)        }
  'Nat'       { PT _ (TS _ 11)        }
  '['         { PT _ (TS _ 12)        }
  ']'         { PT _ (TS _ 13)        }
  'do'        { PT _ (TS _ 14)        }
  'else'      { PT _ (TS _ 15)        }
  'false'     { PT _ (TS _ 16)        }
  'for'       { PT _ (TS _ 17)        }
  'forall'    { PT _ (TS _ 18)        }
  'if'        { PT _ (TS _ 19)        }
  'in'        { PT _ (TS _ 20)        }
  'iszero'    { PT _ (TS _ 21)        }
  'let'       { PT _ (TS _ 22)        }
  'then'      { PT _ (TS _ 23)        }
  'true'      { PT _ (TS _ 24)        }
  'λ'         { PT _ (TS _ 25)        }
  L_Ident     { PT _ (TV $$)          }
  L_integ     { PT _ (TI $$)          }
  L_UVarIdent { PT _ (T_UVarIdent $$) }

%%

Ident :: { FreeFoilTypecheck.HindleyMilner.Parser.Abs.Ident }
Ident  : L_Ident { FreeFoilTypecheck.HindleyMilner.Parser.Abs.Ident $1 }

Integer :: { Integer }
Integer  : L_integ  { (read $1) :: Integer }

UVarIdent :: { FreeFoilTypecheck.HindleyMilner.Parser.Abs.UVarIdent }
UVarIdent  : L_UVarIdent { FreeFoilTypecheck.HindleyMilner.Parser.Abs.UVarIdent $1 }

Pattern :: { FreeFoilTypecheck.HindleyMilner.Parser.Abs.Pattern }
Pattern
  : Ident { FreeFoilTypecheck.HindleyMilner.Parser.Abs.PatternVar $1 }

Exp4 :: { FreeFoilTypecheck.HindleyMilner.Parser.Abs.Exp }
Exp4
  : Ident { FreeFoilTypecheck.HindleyMilner.Parser.Abs.EVar $1 }
  | 'true' { FreeFoilTypecheck.HindleyMilner.Parser.Abs.ETrue }
  | 'false' { FreeFoilTypecheck.HindleyMilner.Parser.Abs.EFalse }
  | Integer { FreeFoilTypecheck.HindleyMilner.Parser.Abs.ENat $1 }
  | '(' Exp ')' { $2 }

Exp3 :: { FreeFoilTypecheck.HindleyMilner.Parser.Abs.Exp }
Exp3
  : Exp3 '+' Exp4 { FreeFoilTypecheck.HindleyMilner.Parser.Abs.EAdd $1 $3 }
  | Exp3 '-' Exp4 { FreeFoilTypecheck.HindleyMilner.Parser.Abs.ESub $1 $3 }
  | 'iszero' Exp4 { FreeFoilTypecheck.HindleyMilner.Parser.Abs.EIsZero $2 }
  | Exp4 { $1 }

Exp2 :: { FreeFoilTypecheck.HindleyMilner.Parser.Abs.Exp }
Exp2
  : Exp2 Exp3 { FreeFoilTypecheck.HindleyMilner.Parser.Abs.EApp $1 $2 }
  | Exp3 { $1 }

Exp1 :: { FreeFoilTypecheck.HindleyMilner.Parser.Abs.Exp }
Exp1
  : 'if' Exp1 'then' Exp1 'else' Exp1 { FreeFoilTypecheck.HindleyMilner.Parser.Abs.EIf $2 $4 $6 }
  | 'let' Pattern '=' Exp1 'in' ScopedExp { FreeFoilTypecheck.HindleyMilner.Parser.Abs.ELet $2 $4 $6 }
  | 'λ' Pattern '.' ScopedExp { FreeFoilTypecheck.HindleyMilner.Parser.Abs.EAbs $2 $4 }
  | 'for' Pattern 'in' '[' Exp1 '..' Exp1 ']' 'do' ScopedExp { FreeFoilTypecheck.HindleyMilner.Parser.Abs.EFor $2 $5 $7 $10 }
  | Exp2 { $1 }

Exp :: { FreeFoilTypecheck.HindleyMilner.Parser.Abs.Exp }
Exp
  : Exp1 ':' Type { FreeFoilTypecheck.HindleyMilner.Parser.Abs.ETyped $1 $3 }
  | Exp1 { $1 }

ScopedExp :: { FreeFoilTypecheck.HindleyMilner.Parser.Abs.ScopedExp }
ScopedExp
  : Exp1 { FreeFoilTypecheck.HindleyMilner.Parser.Abs.ScopedExp $1 }

TypePattern :: { FreeFoilTypecheck.HindleyMilner.Parser.Abs.TypePattern }
TypePattern
  : Ident { FreeFoilTypecheck.HindleyMilner.Parser.Abs.TPatternVar $1 }

Type2 :: { FreeFoilTypecheck.HindleyMilner.Parser.Abs.Type }
Type2
  : UVarIdent { FreeFoilTypecheck.HindleyMilner.Parser.Abs.TUVar $1 }
  | 'Nat' { FreeFoilTypecheck.HindleyMilner.Parser.Abs.TNat }
  | 'Bool' { FreeFoilTypecheck.HindleyMilner.Parser.Abs.TBool }
  | Ident { FreeFoilTypecheck.HindleyMilner.Parser.Abs.TVar $1 }
  | '(' Type ')' { $2 }

Type1 :: { FreeFoilTypecheck.HindleyMilner.Parser.Abs.Type }
Type1
  : Type2 '->' Type1 { FreeFoilTypecheck.HindleyMilner.Parser.Abs.TArrow $1 $3 }
  | Type2 { $1 }

Type :: { FreeFoilTypecheck.HindleyMilner.Parser.Abs.Type }
Type
  : 'forall' TypePattern '.' ScopedType { FreeFoilTypecheck.HindleyMilner.Parser.Abs.TForAll $2 $4 }
  | Type1 { $1 }

ScopedType :: { FreeFoilTypecheck.HindleyMilner.Parser.Abs.ScopedType }
ScopedType
  : Type1 { FreeFoilTypecheck.HindleyMilner.Parser.Abs.ScopedType $1 }

{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

}
