src/FreeFoilTypecheck/HindleyMilner/Parser/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Par.y
-----------------------------------------------------------------------------

state 33 contains 6 shift/reduce conflicts.
state 86 contains 6 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pPattern -> Pattern                         (0)
	%start_pExp3 -> Exp3                               (1)
	%start_pExp2 -> Exp2                               (2)
	%start_pExp1 -> Exp1                               (3)
	%start_pExp -> Exp                                 (4)
	%start_pScopedExp -> ScopedExp                     (5)
	%start_pTypePattern -> TypePattern                 (6)
	%start_pType2 -> Type2                             (7)
	%start_pType1 -> Type1                             (8)
	%start_pType -> Type                               (9)
	%start_pScopedType -> ScopedType                   (10)
	Ident -> L_Ident                                   (11)
	Integer -> L_integ                                 (12)
	UVarIdent -> L_UVarIdent                           (13)
	Pattern -> Ident                                   (14)
	Exp3 -> Ident                                      (15)
	Exp3 -> 'true'                                     (16)
	Exp3 -> 'false'                                    (17)
	Exp3 -> Integer                                    (18)
	Exp3 -> '(' Exp ')'                                (19)
	Exp2 -> Exp2 '+' Exp3                              (20)
	Exp2 -> Exp2 '-' Exp3                              (21)
	Exp2 -> 'iszero' '(' Exp ')'                       (22)
	Exp2 -> Exp3                                       (23)
	Exp1 -> 'if' Exp1 'then' Exp1 'else' Exp1          (24)
	Exp1 -> 'let' Pattern '=' Exp1 'in' ScopedExp      (25)
	Exp1 -> 'λ' Pattern '.' ScopedExp                  (26)
	Exp1 -> Exp1 Exp2                                  (27)
	Exp1 -> 'for' Pattern 'in' '[' Exp1 '..' Exp1 ']' 'do' ScopedExp   (28)
	Exp1 -> Exp2                                       (29)
	Exp -> Exp1 ':' Type                               (30)
	Exp -> Exp1                                        (31)
	ScopedExp -> Exp1                                  (32)
	TypePattern -> Ident                               (33)
	Type2 -> UVarIdent                                 (34)
	Type2 -> 'Nat'                                     (35)
	Type2 -> 'Bool'                                    (36)
	Type2 -> Ident                                     (37)
	Type2 -> '(' Type ')'                              (38)
	Type1 -> Type2 '->' Type1                          (39)
	Type1 -> Type2                                     (40)
	Type -> 'forall' TypePattern '.' ScopedType        (41)
	Type -> Type1                                      (42)
	ScopedType -> Type1                                (43)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { PT _ (TS _ 1) }
	')'            { PT _ (TS _ 2) }
	'+'            { PT _ (TS _ 3) }
	'-'            { PT _ (TS _ 4) }
	'->'           { PT _ (TS _ 5) }
	'.'            { PT _ (TS _ 6) }
	'..'           { PT _ (TS _ 7) }
	':'            { PT _ (TS _ 8) }
	'='            { PT _ (TS _ 9) }
	'Bool'         { PT _ (TS _ 10) }
	'Nat'          { PT _ (TS _ 11) }
	'['            { PT _ (TS _ 12) }
	']'            { PT _ (TS _ 13) }
	'do'           { PT _ (TS _ 14) }
	'else'         { PT _ (TS _ 15) }
	'false'        { PT _ (TS _ 16) }
	'for'          { PT _ (TS _ 17) }
	'forall'       { PT _ (TS _ 18) }
	'if'           { PT _ (TS _ 19) }
	'in'           { PT _ (TS _ 20) }
	'iszero'       { PT _ (TS _ 21) }
	'let'          { PT _ (TS _ 22) }
	'then'         { PT _ (TS _ 23) }
	'true'         { PT _ (TS _ 24) }
	'λ'            { PT _ (TS _ 25) }
	L_Ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_UVarIdent    { PT _ (T_UVarIdent $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pPattern rule  0
	%start_pExp3    rule  1
	%start_pExp2    rule  2
	%start_pExp1    rule  3
	%start_pExp     rule  4
	%start_pScopedExp rule  5
	%start_pTypePattern rule  6
	%start_pType2   rule  7
	%start_pType1   rule  8
	%start_pType    rule  9
	%start_pScopedType rule  10
	Ident           rule  11
	Integer         rule  12
	UVarIdent       rule  13
	Pattern         rule  14
	Exp3            rules 15, 16, 17, 18, 19
	Exp2            rules 20, 21, 22, 23
	Exp1            rules 24, 25, 26, 27, 28, 29
	Exp             rules 30, 31
	ScopedExp       rule  32
	TypePattern     rule  33
	Type2           rules 34, 35, 36, 37, 38
	Type1           rules 39, 40
	Type            rules 41, 42
	ScopedType      rule  43

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pPattern -> . Pattern                        (rule 0)

	L_Ident        shift, and enter state 12

	Ident          goto state 49
	Pattern        goto state 50

State 1

	%start_pExp3 -> . Exp3                              (rule 1)

	'('            shift, and enter state 35
	'false'        shift, and enter state 36
	'true'         shift, and enter state 41
	L_Ident        shift, and enter state 12
	L_integ        shift, and enter state 43

	Ident          goto state 29
	Integer        goto state 30
	Exp3           goto state 48

State 2

	%start_pExp2 -> . Exp2                              (rule 2)

	'('            shift, and enter state 35
	'false'        shift, and enter state 36
	'iszero'       shift, and enter state 39
	'true'         shift, and enter state 41
	L_Ident        shift, and enter state 12
	L_integ        shift, and enter state 43

	Ident          goto state 29
	Integer        goto state 30
	Exp3           goto state 31
	Exp2           goto state 47

State 3

	%start_pExp1 -> . Exp1                              (rule 3)

	'('            shift, and enter state 35
	'false'        shift, and enter state 36
	'for'          shift, and enter state 37
	'if'           shift, and enter state 38
	'iszero'       shift, and enter state 39
	'let'          shift, and enter state 40
	'true'         shift, and enter state 41
	'λ'            shift, and enter state 42
	L_Ident        shift, and enter state 12
	L_integ        shift, and enter state 43

	Ident          goto state 29
	Integer        goto state 30
	Exp3           goto state 31
	Exp2           goto state 32
	Exp1           goto state 46

State 4

	%start_pExp -> . Exp                                (rule 4)

	'('            shift, and enter state 35
	'false'        shift, and enter state 36
	'for'          shift, and enter state 37
	'if'           shift, and enter state 38
	'iszero'       shift, and enter state 39
	'let'          shift, and enter state 40
	'true'         shift, and enter state 41
	'λ'            shift, and enter state 42
	L_Ident        shift, and enter state 12
	L_integ        shift, and enter state 43

	Ident          goto state 29
	Integer        goto state 30
	Exp3           goto state 31
	Exp2           goto state 32
	Exp1           goto state 44
	Exp            goto state 45

State 5

	%start_pScopedExp -> . ScopedExp                    (rule 5)

	'('            shift, and enter state 35
	'false'        shift, and enter state 36
	'for'          shift, and enter state 37
	'if'           shift, and enter state 38
	'iszero'       shift, and enter state 39
	'let'          shift, and enter state 40
	'true'         shift, and enter state 41
	'λ'            shift, and enter state 42
	L_Ident        shift, and enter state 12
	L_integ        shift, and enter state 43

	Ident          goto state 29
	Integer        goto state 30
	Exp3           goto state 31
	Exp2           goto state 32
	Exp1           goto state 33
	ScopedExp      goto state 34

State 6

	%start_pTypePattern -> . TypePattern                (rule 6)

	L_Ident        shift, and enter state 12

	Ident          goto state 27
	TypePattern    goto state 28

State 7

	%start_pType2 -> . Type2                            (rule 7)

	'('            shift, and enter state 18
	'Bool'         shift, and enter state 19
	'Nat'          shift, and enter state 20
	L_Ident        shift, and enter state 12
	L_UVarIdent    shift, and enter state 21

	Ident          goto state 13
	UVarIdent      goto state 14
	Type2          goto state 26

State 8

	%start_pType1 -> . Type1                            (rule 8)

	'('            shift, and enter state 18
	'Bool'         shift, and enter state 19
	'Nat'          shift, and enter state 20
	L_Ident        shift, and enter state 12
	L_UVarIdent    shift, and enter state 21

	Ident          goto state 13
	UVarIdent      goto state 14
	Type2          goto state 15
	Type1          goto state 25

State 9

	%start_pType -> . Type                              (rule 9)

	'('            shift, and enter state 18
	'Bool'         shift, and enter state 19
	'Nat'          shift, and enter state 20
	'forall'       shift, and enter state 24
	L_Ident        shift, and enter state 12
	L_UVarIdent    shift, and enter state 21

	Ident          goto state 13
	UVarIdent      goto state 14
	Type2          goto state 15
	Type1          goto state 22
	Type           goto state 23

State 10

	%start_pScopedType -> . ScopedType                  (rule 10)

	'('            shift, and enter state 18
	'Bool'         shift, and enter state 19
	'Nat'          shift, and enter state 20
	L_Ident        shift, and enter state 12
	L_UVarIdent    shift, and enter state 21

	Ident          goto state 13
	UVarIdent      goto state 14
	Type2          goto state 15
	Type1          goto state 16
	ScopedType     goto state 17

State 11

	Ident -> . L_Ident                                  (rule 11)

	L_Ident        shift, and enter state 12


State 12

	Ident -> L_Ident .                                  (rule 11)

	'('            reduce using rule 11
	')'            reduce using rule 11
	'+'            reduce using rule 11
	'-'            reduce using rule 11
	'->'           reduce using rule 11
	'.'            reduce using rule 11
	'..'           reduce using rule 11
	':'            reduce using rule 11
	'='            reduce using rule 11
	']'            reduce using rule 11
	'else'         reduce using rule 11
	'false'        reduce using rule 11
	'in'           reduce using rule 11
	'iszero'       reduce using rule 11
	'then'         reduce using rule 11
	'true'         reduce using rule 11
	L_Ident        reduce using rule 11
	L_integ        reduce using rule 11
	%eof           reduce using rule 11


State 13

	Type2 -> Ident .                                    (rule 37)

	')'            reduce using rule 37
	'->'           reduce using rule 37
	%eof           reduce using rule 37


State 14

	Type2 -> UVarIdent .                                (rule 34)

	')'            reduce using rule 34
	'->'           reduce using rule 34
	%eof           reduce using rule 34


State 15

	Type1 -> Type2 . '->' Type1                         (rule 39)
	Type1 -> Type2 .                                    (rule 40)

	')'            reduce using rule 40
	'->'           shift, and enter state 63
	%eof           reduce using rule 40


State 16

	ScopedType -> Type1 .                               (rule 43)

	')'            reduce using rule 43
	%eof           reduce using rule 43


State 17

	%start_pScopedType -> ScopedType .                  (rule 10)

	%eof           accept


State 18

	Type2 -> '(' . Type ')'                             (rule 38)

	'('            shift, and enter state 18
	'Bool'         shift, and enter state 19
	'Nat'          shift, and enter state 20
	'forall'       shift, and enter state 24
	L_Ident        shift, and enter state 12
	L_UVarIdent    shift, and enter state 21

	Ident          goto state 13
	UVarIdent      goto state 14
	Type2          goto state 15
	Type1          goto state 22
	Type           goto state 62

State 19

	Type2 -> 'Bool' .                                   (rule 36)

	')'            reduce using rule 36
	'->'           reduce using rule 36
	%eof           reduce using rule 36


State 20

	Type2 -> 'Nat' .                                    (rule 35)

	')'            reduce using rule 35
	'->'           reduce using rule 35
	%eof           reduce using rule 35


State 21

	UVarIdent -> L_UVarIdent .                          (rule 13)

	')'            reduce using rule 13
	'->'           reduce using rule 13
	%eof           reduce using rule 13


State 22

	Type -> Type1 .                                     (rule 42)

	')'            reduce using rule 42
	%eof           reduce using rule 42


State 23

	%start_pType -> Type .                              (rule 9)

	%eof           accept


State 24

	Type -> 'forall' . TypePattern '.' ScopedType       (rule 41)

	L_Ident        shift, and enter state 12

	Ident          goto state 27
	TypePattern    goto state 61

State 25

	%start_pType1 -> Type1 .                            (rule 8)

	%eof           accept


State 26

	%start_pType2 -> Type2 .                            (rule 7)

	%eof           accept


State 27

	TypePattern -> Ident .                              (rule 33)

	'.'            reduce using rule 33
	%eof           reduce using rule 33


State 28

	%start_pTypePattern -> TypePattern .                (rule 6)

	%eof           accept


State 29

	Exp3 -> Ident .                                     (rule 15)

	'('            reduce using rule 15
	')'            reduce using rule 15
	'+'            reduce using rule 15
	'-'            reduce using rule 15
	'..'           reduce using rule 15
	':'            reduce using rule 15
	']'            reduce using rule 15
	'else'         reduce using rule 15
	'false'        reduce using rule 15
	'in'           reduce using rule 15
	'iszero'       reduce using rule 15
	'then'         reduce using rule 15
	'true'         reduce using rule 15
	L_Ident        reduce using rule 15
	L_integ        reduce using rule 15
	%eof           reduce using rule 15


State 30

	Exp3 -> Integer .                                   (rule 18)

	'('            reduce using rule 18
	')'            reduce using rule 18
	'+'            reduce using rule 18
	'-'            reduce using rule 18
	'..'           reduce using rule 18
	':'            reduce using rule 18
	']'            reduce using rule 18
	'else'         reduce using rule 18
	'false'        reduce using rule 18
	'in'           reduce using rule 18
	'iszero'       reduce using rule 18
	'then'         reduce using rule 18
	'true'         reduce using rule 18
	L_Ident        reduce using rule 18
	L_integ        reduce using rule 18
	%eof           reduce using rule 18


State 31

	Exp2 -> Exp3 .                                      (rule 23)

	'('            reduce using rule 23
	')'            reduce using rule 23
	'+'            reduce using rule 23
	'-'            reduce using rule 23
	'..'           reduce using rule 23
	':'            reduce using rule 23
	']'            reduce using rule 23
	'else'         reduce using rule 23
	'false'        reduce using rule 23
	'in'           reduce using rule 23
	'iszero'       reduce using rule 23
	'then'         reduce using rule 23
	'true'         reduce using rule 23
	L_Ident        reduce using rule 23
	L_integ        reduce using rule 23
	%eof           reduce using rule 23


State 32

	Exp2 -> Exp2 . '+' Exp3                             (rule 20)
	Exp2 -> Exp2 . '-' Exp3                             (rule 21)
	Exp1 -> Exp2 .                                      (rule 29)

	'('            reduce using rule 29
	')'            reduce using rule 29
	'+'            shift, and enter state 51
	'-'            shift, and enter state 52
	'..'           reduce using rule 29
	':'            reduce using rule 29
	']'            reduce using rule 29
	'else'         reduce using rule 29
	'false'        reduce using rule 29
	'in'           reduce using rule 29
	'iszero'       reduce using rule 29
	'then'         reduce using rule 29
	'true'         reduce using rule 29
	L_Ident        reduce using rule 29
	L_integ        reduce using rule 29
	%eof           reduce using rule 29


State 33

	Exp1 -> Exp1 . Exp2                                 (rule 27)
	ScopedExp -> Exp1 .                                 (rule 32)

	'('            shift, and enter state 35
			(reduce using rule 32)

	')'            reduce using rule 32
	'..'           reduce using rule 32
	':'            reduce using rule 32
	']'            reduce using rule 32
	'else'         reduce using rule 32
	'false'        shift, and enter state 36
			(reduce using rule 32)

	'in'           reduce using rule 32
	'iszero'       shift, and enter state 39
			(reduce using rule 32)

	'then'         reduce using rule 32
	'true'         shift, and enter state 41
			(reduce using rule 32)

	L_Ident        shift, and enter state 12
			(reduce using rule 32)

	L_integ        shift, and enter state 43
			(reduce using rule 32)

	%eof           reduce using rule 32

	Ident          goto state 29
	Integer        goto state 30
	Exp3           goto state 31
	Exp2           goto state 53

State 34

	%start_pScopedExp -> ScopedExp .                    (rule 5)

	%eof           accept


State 35

	Exp3 -> '(' . Exp ')'                               (rule 19)

	'('            shift, and enter state 35
	'false'        shift, and enter state 36
	'for'          shift, and enter state 37
	'if'           shift, and enter state 38
	'iszero'       shift, and enter state 39
	'let'          shift, and enter state 40
	'true'         shift, and enter state 41
	'λ'            shift, and enter state 42
	L_Ident        shift, and enter state 12
	L_integ        shift, and enter state 43

	Ident          goto state 29
	Integer        goto state 30
	Exp3           goto state 31
	Exp2           goto state 32
	Exp1           goto state 44
	Exp            goto state 60

State 36

	Exp3 -> 'false' .                                   (rule 17)

	'('            reduce using rule 17
	')'            reduce using rule 17
	'+'            reduce using rule 17
	'-'            reduce using rule 17
	'..'           reduce using rule 17
	':'            reduce using rule 17
	']'            reduce using rule 17
	'else'         reduce using rule 17
	'false'        reduce using rule 17
	'in'           reduce using rule 17
	'iszero'       reduce using rule 17
	'then'         reduce using rule 17
	'true'         reduce using rule 17
	L_Ident        reduce using rule 17
	L_integ        reduce using rule 17
	%eof           reduce using rule 17


State 37

	Exp1 -> 'for' . Pattern 'in' '[' Exp1 '..' Exp1 ']' 'do' ScopedExp    (rule 28)

	L_Ident        shift, and enter state 12

	Ident          goto state 49
	Pattern        goto state 59

State 38

	Exp1 -> 'if' . Exp1 'then' Exp1 'else' Exp1         (rule 24)

	'('            shift, and enter state 35
	'false'        shift, and enter state 36
	'for'          shift, and enter state 37
	'if'           shift, and enter state 38
	'iszero'       shift, and enter state 39
	'let'          shift, and enter state 40
	'true'         shift, and enter state 41
	'λ'            shift, and enter state 42
	L_Ident        shift, and enter state 12
	L_integ        shift, and enter state 43

	Ident          goto state 29
	Integer        goto state 30
	Exp3           goto state 31
	Exp2           goto state 32
	Exp1           goto state 58

State 39

	Exp2 -> 'iszero' . '(' Exp ')'                      (rule 22)

	'('            shift, and enter state 57


State 40

	Exp1 -> 'let' . Pattern '=' Exp1 'in' ScopedExp     (rule 25)

	L_Ident        shift, and enter state 12

	Ident          goto state 49
	Pattern        goto state 56

State 41

	Exp3 -> 'true' .                                    (rule 16)

	'('            reduce using rule 16
	')'            reduce using rule 16
	'+'            reduce using rule 16
	'-'            reduce using rule 16
	'..'           reduce using rule 16
	':'            reduce using rule 16
	']'            reduce using rule 16
	'else'         reduce using rule 16
	'false'        reduce using rule 16
	'in'           reduce using rule 16
	'iszero'       reduce using rule 16
	'then'         reduce using rule 16
	'true'         reduce using rule 16
	L_Ident        reduce using rule 16
	L_integ        reduce using rule 16
	%eof           reduce using rule 16


State 42

	Exp1 -> 'λ' . Pattern '.' ScopedExp                 (rule 26)

	L_Ident        shift, and enter state 12

	Ident          goto state 49
	Pattern        goto state 55

State 43

	Integer -> L_integ .                                (rule 12)

	'('            reduce using rule 12
	')'            reduce using rule 12
	'+'            reduce using rule 12
	'-'            reduce using rule 12
	'..'           reduce using rule 12
	':'            reduce using rule 12
	']'            reduce using rule 12
	'else'         reduce using rule 12
	'false'        reduce using rule 12
	'in'           reduce using rule 12
	'iszero'       reduce using rule 12
	'then'         reduce using rule 12
	'true'         reduce using rule 12
	L_Ident        reduce using rule 12
	L_integ        reduce using rule 12
	%eof           reduce using rule 12


State 44

	Exp1 -> Exp1 . Exp2                                 (rule 27)
	Exp -> Exp1 . ':' Type                              (rule 30)
	Exp -> Exp1 .                                       (rule 31)

	'('            shift, and enter state 35
	')'            reduce using rule 31
	':'            shift, and enter state 54
	'false'        shift, and enter state 36
	'iszero'       shift, and enter state 39
	'true'         shift, and enter state 41
	L_Ident        shift, and enter state 12
	L_integ        shift, and enter state 43
	%eof           reduce using rule 31

	Ident          goto state 29
	Integer        goto state 30
	Exp3           goto state 31
	Exp2           goto state 53

State 45

	%start_pExp -> Exp .                                (rule 4)

	%eof           accept


State 46

	%start_pExp1 -> Exp1 .                              (rule 3)
	Exp1 -> Exp1 . Exp2                                 (rule 27)

	'('            shift, and enter state 35
	'false'        shift, and enter state 36
	'iszero'       shift, and enter state 39
	'true'         shift, and enter state 41
	L_Ident        shift, and enter state 12
	L_integ        shift, and enter state 43
	%eof           accept

	Ident          goto state 29
	Integer        goto state 30
	Exp3           goto state 31
	Exp2           goto state 53

State 47

	%start_pExp2 -> Exp2 .                              (rule 2)
	Exp2 -> Exp2 . '+' Exp3                             (rule 20)
	Exp2 -> Exp2 . '-' Exp3                             (rule 21)

	'+'            shift, and enter state 51
	'-'            shift, and enter state 52
	%eof           accept


State 48

	%start_pExp3 -> Exp3 .                              (rule 1)

	%eof           accept


State 49

	Pattern -> Ident .                                  (rule 14)

	'.'            reduce using rule 14
	'='            reduce using rule 14
	'in'           reduce using rule 14
	%eof           reduce using rule 14


State 50

	%start_pPattern -> Pattern .                        (rule 0)

	%eof           accept


State 51

	Exp2 -> Exp2 '+' . Exp3                             (rule 20)

	'('            shift, and enter state 35
	'false'        shift, and enter state 36
	'true'         shift, and enter state 41
	L_Ident        shift, and enter state 12
	L_integ        shift, and enter state 43

	Ident          goto state 29
	Integer        goto state 30
	Exp3           goto state 75

State 52

	Exp2 -> Exp2 '-' . Exp3                             (rule 21)

	'('            shift, and enter state 35
	'false'        shift, and enter state 36
	'true'         shift, and enter state 41
	L_Ident        shift, and enter state 12
	L_integ        shift, and enter state 43

	Ident          goto state 29
	Integer        goto state 30
	Exp3           goto state 74

State 53

	Exp2 -> Exp2 . '+' Exp3                             (rule 20)
	Exp2 -> Exp2 . '-' Exp3                             (rule 21)
	Exp1 -> Exp1 Exp2 .                                 (rule 27)

	'('            reduce using rule 27
	')'            reduce using rule 27
	'+'            shift, and enter state 51
	'-'            shift, and enter state 52
	'..'           reduce using rule 27
	':'            reduce using rule 27
	']'            reduce using rule 27
	'else'         reduce using rule 27
	'false'        reduce using rule 27
	'in'           reduce using rule 27
	'iszero'       reduce using rule 27
	'then'         reduce using rule 27
	'true'         reduce using rule 27
	L_Ident        reduce using rule 27
	L_integ        reduce using rule 27
	%eof           reduce using rule 27


State 54

	Exp -> Exp1 ':' . Type                              (rule 30)

	'('            shift, and enter state 18
	'Bool'         shift, and enter state 19
	'Nat'          shift, and enter state 20
	'forall'       shift, and enter state 24
	L_Ident        shift, and enter state 12
	L_UVarIdent    shift, and enter state 21

	Ident          goto state 13
	UVarIdent      goto state 14
	Type2          goto state 15
	Type1          goto state 22
	Type           goto state 73

State 55

	Exp1 -> 'λ' Pattern . '.' ScopedExp                 (rule 26)

	'.'            shift, and enter state 72


State 56

	Exp1 -> 'let' Pattern . '=' Exp1 'in' ScopedExp     (rule 25)

	'='            shift, and enter state 71


State 57

	Exp2 -> 'iszero' '(' . Exp ')'                      (rule 22)

	'('            shift, and enter state 35
	'false'        shift, and enter state 36
	'for'          shift, and enter state 37
	'if'           shift, and enter state 38
	'iszero'       shift, and enter state 39
	'let'          shift, and enter state 40
	'true'         shift, and enter state 41
	'λ'            shift, and enter state 42
	L_Ident        shift, and enter state 12
	L_integ        shift, and enter state 43

	Ident          goto state 29
	Integer        goto state 30
	Exp3           goto state 31
	Exp2           goto state 32
	Exp1           goto state 44
	Exp            goto state 70

State 58

	Exp1 -> 'if' Exp1 . 'then' Exp1 'else' Exp1         (rule 24)
	Exp1 -> Exp1 . Exp2                                 (rule 27)

	'('            shift, and enter state 35
	'false'        shift, and enter state 36
	'iszero'       shift, and enter state 39
	'then'         shift, and enter state 69
	'true'         shift, and enter state 41
	L_Ident        shift, and enter state 12
	L_integ        shift, and enter state 43

	Ident          goto state 29
	Integer        goto state 30
	Exp3           goto state 31
	Exp2           goto state 53

State 59

	Exp1 -> 'for' Pattern . 'in' '[' Exp1 '..' Exp1 ']' 'do' ScopedExp    (rule 28)

	'in'           shift, and enter state 68


State 60

	Exp3 -> '(' Exp . ')'                               (rule 19)

	')'            shift, and enter state 67


State 61

	Type -> 'forall' TypePattern . '.' ScopedType       (rule 41)

	'.'            shift, and enter state 66


State 62

	Type2 -> '(' Type . ')'                             (rule 38)

	')'            shift, and enter state 65


State 63

	Type1 -> Type2 '->' . Type1                         (rule 39)

	'('            shift, and enter state 18
	'Bool'         shift, and enter state 19
	'Nat'          shift, and enter state 20
	L_Ident        shift, and enter state 12
	L_UVarIdent    shift, and enter state 21

	Ident          goto state 13
	UVarIdent      goto state 14
	Type2          goto state 15
	Type1          goto state 64

State 64

	Type1 -> Type2 '->' Type1 .                         (rule 39)

	')'            reduce using rule 39
	%eof           reduce using rule 39


State 65

	Type2 -> '(' Type ')' .                             (rule 38)

	')'            reduce using rule 38
	'->'           reduce using rule 38
	%eof           reduce using rule 38


State 66

	Type -> 'forall' TypePattern '.' . ScopedType       (rule 41)
